--- a/index.html
+++ b/index.html
@@ -5,35 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <title>Weather Dashboard</title>
-    <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
-    <header>
-        <h1>Weather Dashboard</h1>
-    </header>
+    <!-- Search Bar -->
+    <main class="container">
+        <section class="row">
+            <div class="col-12 col-md-3">
+                <form class="card p-3 m-3">
+                    <input id="input" class="form-control mb-3" type="search" placeholder="Raleigh"> 
+                    <button id="searched-cities" class="btn btn-primary" type="submit">Search</button>
+                    <div id="recent-searches"></div>
+                </form>
+            </div> 
+            
+            <!-- 5-Day Forecast -->
+            <div class="col-12 col-md-9">
+                <div id="current-weather" class="card p-3 m-3"></div>
+                <div id="five-days" class="row">
+            </div>    
+        </section>
+    </main>
 
-    <aside>
-        <h2>Search for a City:</h2>
-        <input id="text-box"></input>
-        <button>Search</button>
-    </aside>
 
-    <section id="right">
-        <div>
-            <h3>Raleigh</h3>
-            <script></script>
-        </div>
-
-    </section>
-
-    <section id="bottom">
-        <h3>5-Day Forecast:</h3>
-        <script></script>
-
-    </section>
-
+    <script src="./assets/script2.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
