--- a/index.html
+++ b/index.html
@@ -11,29 +11,39 @@
 </head>
 
 <body>
+    <!-- Header -->
+    <header>
+        <h1> Weather Dashboard </h1>
+    </header>
     <!-- Search Bar -->
     <main class="container">
         <section class="row">
-            <div class="col-12 col-md-3">
-                <form class="card p-3 m-3">
+            <div class="col-12 col-lg-3">
+                <form class="card p-3 m-2">
                     <input id="input" class="form-control mb-3" type="search" placeholder="Raleigh"> 
-                    <button id="searched-cities" class="btn btn-primary" type="submit">Search</button>
-                    <div id="recent-searches"></div>
+                    <button class="btn btn-warning" id="searchCity" type="submit">Search</button>
+                    <hr />
+                    <div id="previous-search"></div>
                 </form>
-            </div> 
-            
-            <!-- 5-Day Forecast -->
+            </div>
+            <!-- Daily Forecast -->
             <div class="col-12 col-md-9">
-                <div id="current-weather" class="card p-3 m-3"></div>
-                <div id="five-days" class="row">
+                <div class="card p-3 m-3" id="current-weather"></div>
+                    <h2 id="current-day"></h2>
+                    <p id="uv-index"></p>
+                <!-- 5-Day Forecast -->
+                <div class="row" id="five-day-forecast"></div>
             </div>    
         </section>
     </main>
 
 
-    <script src="./assets/script2.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
+    <script src="./assets/js/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
