--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!-- Daily Forecast -->
             <div class="col-12 col-md-9">
                 <div class="card p-3 m-3" id="current-weather"></div>
-                    <h2 id="current-day"></h2>
+                    <h2 id="todaysdate"></h2>
          
                 <!-- 5-Day Forecast -->
                 <div class="row" id="five-day-forecast"></div>
@@ -38,12 +38,12 @@
     </main>
 
 
-    <script src="./assets/js/script.js"></script>
     <!-- Moment -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 
 </body>
 
